--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
   <div class="h-lvh border bg-[#080808] border-indigo-600">
-    <nav class="fixed top-0 w-full border-b-2 border-[#2B2B2B] bg-[#080808]">
-      <div class="flex sm:justify-center md:justify-between h-28 px-24">
+    <nav class="md:fixed md:top-0 w-full border-b-2 border-[#2B2B2B] bg-[#080808]">
+      <div class="flex justify-center md:justify-between h-28 px-24">
         <div class="flex items-center">
           <img class="w-auto h-auto" src="./assets/images/gp-logo.png" alt="GOOD PUSH LOGO">
         </div>
-        <div class="md:flex items-center space-x-10 sm:hidden md-"> <!-- <div class="hidden sm:ml-6 sm:block"></div -->
+        <div class="md:flex items-center space-x-10 hidden"> <!-- <div class="hidden sm:ml-6 sm:block"></div -->
             <a href="#" class="text-[#FFFFFF] hover:text-[#E22231] text-lg font-light leading-none tracking-widest">SERVICES</a>
             <a href="#" class="text-[#FFFFFF] hover:text-[#E22231] text-lg font-light leading-none tracking-widest">WORK</a>
             <a href="#" class="text-[#FFFFFF] hover:text-[#E22231] text-lg font-light leading-none tracking-widest">ABOUT</a>
@@ -23,10 +23,10 @@
         </div>
       </div>
     </nav>
-    <section class="w-full h-full mt-12 flex flex-col justify-center items-center">
-      <p class="mb-6 text-[#FFFFFF] sm:text-3xl 2xl:text-7xl font-thin leading-none">DON'T JUST EXIST ONLINE,</p>
-      <p class="text-[#FFFFFF] sm:text-7xl 2xl:text-[10rem] font-normal leading-none">THRIVE ONLINE.</p>
-      <h1 class="get-a-goodpush mt-24 text-[#FFFFFF] sm:text-4xl 2xl:text-7xl font-normal leading-none">GET A <span class="get-a-goodpush text-[#E22231]">GOODPUSH</span></h1>
+    <section class="w-full h-full md:mt-12 flex flex-col justify-center items-center">
+      <p class="mb-6 text-[#FFFFFF] text-large sm:text-3xl 2xl:text-7xl font-thin leading-none">DON'T JUST EXIST ONLINE,</p>
+      <p class="text-[#FFFFFF] text-4xl sm:text-7xl 2xl:text-[10rem] font-normal leading-none">THRIVE ONLINE.</p>
+      <h1 class="get-a-goodpush mt-24 mb-28 text-[#FFFFFF] text-2xl sm:text-4xl 2xl:text-7xl font-normal leading-none">GET A <span class="get-a-goodpush text-[#E22231]">GOODPUSH</span></h1>
     </section>
   </div>
   <div class="h-lvh bg-slate-600 border border-indigo-600"></div>
