--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         </div>
       </div>
     </nav>
-    <section class="w-full py-24 md:h-full md:mt-12 flex flex-col justify-center items-center border-b-2 border-[#2B2B2B]">
-      <p class="mb-6 text-[#FFFFFF] text-large sm:text-3xl 2xl:text-7xl font-thin leading-none">DON'T JUST EXIST ONLINE,</p>
-      <p class="text-[#FFFFFF] text-4xl sm:text-7xl 2xl:text-[10rem] font-normal leading-none">THRIVE ONLINE.</p>
-      <h1 class="get-a-goodpush mt-14 md:mt-24 md:mb-28 text-[#FFFFFF] text-2xl sm:text-4xl 2xl:text-7xl font-normal leading-none">GET A <span class="get-a-goodpush text-[#E22231]">GOODPUSH</span></h1>
+    <section class="w-full px-6 md:px-24 py-24 md:h-full md:mt-12 flex flex-col justify-center items-start md:items-center border-b-2 border-[#2B2B2B]">
+      <p class="mb-6 text-[#FFFFFF] text-6xl 2xl:text-7xl font-thin leading-none">DON'T JUST EXIST ONLINE,</p>
+      <p class="text-[#FFFFFF] text-7xl 2xl:text-[10rem] font-normal leading-none bg-[#E22231]">THRIVE ONLINE.</p>
+      <h1 class="get-a-goodpush mt-14 md:mt-24 md:mb-28 text-[#FFFFFF] text-4xl 2xl:text-7xl font-normal leading-none">GET A <span class="get-a-goodpush text-[#E22231]">GOODPUSH</span></h1>
     </section>
   </div>
   <div class="h-lvh bg-slate-600 border border-indigo-600"></div>
