--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
 <body>
   <div class="h-lvh border bg-[#080808]">
     <nav class="md:fixed md:top-0 w-full border-b-2 border-[#2B2B2B] bg-[#080808]">
-      <div class="flex justify-start md:justify-between h-28 px-6 md:px-24">
+      <div class="h-28 px-6 sm:px-12 2xl:px-24 flex justify-start md:justify-between">
         <div class="flex items-center">
           <img class="h-8 md:w-auto md:h-auto" src="./assets/images/gp-logo.png" alt="GOOD PUSH LOGO">
         </div>
-        <div class="md:flex items-center space-x-10 hidden"> <!-- <div class="hidden sm:ml-6 sm:block"></div -->
-            <a href="#" class="text-[#FFFFFF] hover:text-[#E22231] text-lg font-light leading-none tracking-widest">SERVICES</a>
-            <a href="#" class="text-[#FFFFFF] hover:text-[#E22231] text-lg font-light leading-none tracking-widest">WORK</a>
-            <a href="#" class="text-[#FFFFFF] hover:text-[#E22231] text-lg font-light leading-none tracking-widest">ABOUT</a>
-            <a href="#" class="text-[#FFFFFF] hover:text-[#E22231] text-lg font-bold leading-none tracking-widest">LET'S DISCUSS</a>
+        <div class="md:flex items-center space-x-8 lg:space-x-10 hidden"> <!-- <div class="hidden sm:ml-6 sm:block"></div -->
+            <a href="#" class="text-[#FFFFFF] hover:text-[#E22231] md:text-base lg:text-lg font-light leading-none tracking-widest">SERVICES</a>
+            <a href="#" class="text-[#FFFFFF] hover:text-[#E22231] md:text-base lg:text-lg font-light leading-none tracking-widest">WORK</a>
+            <a href="#" class="text-[#FFFFFF] hover:text-[#E22231] md:text-base lg:text-lg font-light leading-none tracking-widest">ABOUT</a>
+            <a href="#" class="text-[#FFFFFF] hover:text-[#E22231] md:text-base lg:text-lg font-bold leading-none tracking-widest">LET'S DISCUSS</a>
         </div>
       </div>
     </nav>
-    <section class="w-full px-6 md:px-24 py-24 md:h-full md:mt-12 flex flex-col justify-center items-start md:items-center border-b-2 border-[#2B2B2B]">
-      <p class="mb-6 text-[#FFFFFF] text-6xl 2xl:text-7xl font-thin leading-none">DON'T JUST EXIST ONLINE,</p>
-      <p class="text-[#FFFFFF] text-7xl 2xl:text-[10rem] font-normal leading-none bg-[#E22231]">THRIVE ONLINE.</p>
-      <h1 class="get-a-goodpush mt-14 md:mt-24 md:mb-28 text-[#FFFFFF] text-4xl 2xl:text-7xl font-normal leading-none">GET A <span class="get-a-goodpush text-[#E22231]">GOODPUSH</span></h1>
+    <section class="w-full md:h-full px-6 sm:px-12 2xl:px-24 py-24 md:mt-12 flex flex-col justify-center items-start md:items-center border-b-2 border-[#2B2B2B]">
+      <p class="text-[#FFFFFF] text-6xl md:text-4xl lg:text-5xl xl:text-6xl 2xl:text-7xl font-thin leading-none">DON'T JUST EXIST ONLINE,</p>
+      <p class="mt-6 2xl:mt-12 mb-16 lg:mb-20 xl:mb-24 2xl:mb-32 text-[#FFFFFF] text-7xl lg:text-8xl xl:text-9xl 2xl:text-[10rem] font-normal leading-none">THRIVE ONLINE.</p>
+      <h1 class="get-a-goodpush text-[#FFFFFF] text-4xl lg:text-5xl lg:text-6xl 2xl:text-7xl font-normal leading-none">GET A <span class="get-a-goodpush text-[#E22231]">GOODPUSH</span></h1>
     </section>
   </div>
   <div class="h-lvh bg-slate-600 border border-indigo-600"></div>
